--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <div class="site">
 
 <header>
-<div class="logo">TV Live</div>
+<div class="logo">SMTTV (Hecho por Salvador Mompó Tardito)</div>
 <nav>
 <a href="#">Próximos</a>
 <a href="#">En vivo</a>
@@ -157,3 +157,4 @@ setStream("tyc");
 
 </body>
 </html>
+
