--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ header .actions .primary{background:#0063f7;color:#fff;}
 
 <div class="match-card" onclick="setStream('tnt');scrollPlayer();">
 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f4/TNT_Sports_Premium_%28Argentina%29.png?20250201035541" style="width:120px;">
-<div class="name">Boca vs River</div>
-<div class="details">Liga Profesional — 21:00 · TNT Sports</div>
+<div class="name">Cúcuta Deportivo vs Once Caldas</div>
+<div class="details">Liga BetPlay (Colombia) — 18:00 · WIN Sports+</div>
 </div>
 
 <div class="match-card" onclick="setStream('fox');scrollPlayer();">
@@ -157,4 +157,5 @@ setStream("tyc");
 
 </body>
 </html>
+
 
