--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <div class="details">Serie Río de la Plata — 21:00 · ESPN PREMIUM</div>
 </div>
 
-<div class="match-card" onclick="setStream('fox');scrollPlayer();">
+<div class="match-card" onclick="setStream('tyc');scrollPlayer();">
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Fox_Sports_Argentina_2023.svg/500px-Fox_Sports_Argentina_2023.svg.png" style="width:120px;">
-<div class="name">San Lorenzo vs Racing</div>
-<div class="details">Copa LPF — 19:00 · Fox Sports</div>
+<div class="name">Estudiantes de la Plata vs Ituzaingó</div>
+<div class="details">Copa Argentina — 21:00 · TyC Sports</div>
 </div>
 
 <div class="match-card" onclick="setStream('dsports');scrollPlayer();">
@@ -157,6 +157,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
