--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ header .actions .primary{background:#0063f7;color:#fff;}
 </div>
 
 <div class="match-card" onclick="setStream('tyc');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Fox_Sports_Argentina_2023.svg/500px-Fox_Sports_Argentina_2023.svg.png" style="width:120px;">
+<img src="https://upload.wikimedia.org/wikipedia/en/a/aa/Copa_argentina_logo22.png" style="width:120px;">
 <div class="name">Estudiantes de la Plata vs Ituzaingó</div>
 <div class="details">Copa Argentina — 21:00 · TyC Sports</div>
 </div>
@@ -157,6 +157,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
