--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <div class="row-cards">
 
 <div class="match-card" onclick="setStream('espnpremium');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png?20240503072911" style="width:120px;">
-<div class="name">Kairat Almaty vs Club Brujas</div>
-<div class="details">Champions League — 12:30 · ESPN 1</div>
+<img src="serieriodelaplata.png" style="width:120px;">
+<div class="name">Racing de Montevideo vs Universidad de Concepción</div>
+<div class="details">Serie Río de la Plata — 21:00 · ESPN PREMIUM</div>
 </div>
 
 <div class="match-card" onclick="setStream('tyc');scrollPlayer();">
@@ -157,11 +157,5 @@ setStream("tyc");
 
 </body>
 </html>
-
-
-
-
-
-
 
 
