--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ header .actions .primary{background:#0063f7;color:#fff;}
 
 <div class="match-card" onclick="setStream('espnpremium');scrollPlayer();">
 <img src="serieriodelaplata.png" style="width:120px;">
-<div class="name">Racing de Montevideo vs Universidad de Concepción</div>
-<div class="details">Serie Río de la Plata — 21:00 · ESPN PREMIUM</div>
+<div class="name">Kairat Almaty vs Club Brujas</div>
+<div class="details">Champions League — 12:30 · ESPN 1</div>
 </div>
 
 <div class="match-card" onclick="setStream('tyc');scrollPlayer();">
@@ -131,11 +131,11 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
 <script>
 var streams = {
-  tyc: "https://lcrj3.envivoslatam.org/hotflix/tycsports/index.m3u8?token=5debd8237362d68de53b3323ea3013b1fbef3e30-2f-1768898858-1768844858&ip=190.175.32.169",
-  dsports: "https://smjt9q.envivoslatam.org/hotflix/dsports/index.m3u8?token=225aa8606045d5884a8f5a4e0347b4b53067d162-11-1768899134-1768845134&ip=190.175.32.169",
-  tnt: "https://mze7u.envivoslatam.org/hotflix/tntsports/index.m3u8?token=2cceafff70821aad425f165c50f486aa887e9e9d-05-1768899238-1768845238&ip=190.175.32.169",
-  fox: "https://smjt9q.envivoslatam.org/hotflix/foxsports/index.m3u8?token=bfc8bdf5cd257c11d0cd980c50f4a892c79eaf53-28-1768899975-1768845975&ip=190.175.32.169",
-  espnpremium: "https://vg7ie.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=c38a37c6ddd5904d1d129645449de127016325b8-4a-1768899512-1768845512&ip=190.175.32.169"
+  tyc: "https://rci1w.envivoslatam.org/hotflix/tycsports/index.m3u8?token=2faf73dc95e5539c6b603a60e52d8586e10f2a51-63-1768968899-1768914899&ip=103.108.230.51",
+  dsports: "https://wf6kt.envivoslatam.org/hotflix/dsports/index.m3u8?token=f051f7e553452baeb9d2bdd9339dadd9e76f3c0b-4f-1768968925-1768914925&ip=103.108.230.51",
+  tnt: "https://mze7u.envivoslatam.org/hotflix/tntsports/index.m3u8?token=bda516f4cfa61046c2c87324b1188eb9b306570d-fc-1768968947-1768914947&ip=103.108.230.51",
+  fox: "https://ub2dr.envivoslatam.org/hotflix/foxsports/index.m3u8?token=0ba7dbe10a732f2a7db337665ef856bbeb4fa9af-63-1768968988-1768914988&ip=103.108.230.51",
+  espnpremium: "https://ub2dr.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=c9b8402f30c7f7881cff3cbfc3c6d0c3e645c7c7-5f-1768969011-1768915011&ip=103.108.230.51"
 };
 
 var player = videojs("mainPlayer", {
@@ -157,5 +157,6 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
