--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <h3>Partidos en vivo</h3>
 <div class="row-cards">
 
-<div class="match-card" onclick="setStream('espnpremium');scrollPlayer();">
-<img src="serieriodelaplata.png" style="width:120px;">
+<div class="match-card" onclick="setStream('fox');scrollPlayer();">
+<img src="https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png?20240503072911" style="width:120px;">
 <div class="name">Kairat Almaty vs Club Brujas</div>
-<div class="details">Champions League — 12:30 · ESPN 1</div>
+<div class="details">Champions League — 12:30 · FOX Sports</div>
 </div>
 
 <div class="match-card" onclick="setStream('tyc');scrollPlayer();">
@@ -157,6 +157,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
