--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ var streams = {
   tyc: "https://rci1w.envivoslatam.org/hotflix/tycsports/index.m3u8?token=2faf73dc95e5539c6b603a60e52d8586e10f2a51-63-1768968899-1768914899&ip=103.108.230.51",
   dsports: "https://wf6kt.envivoslatam.org/hotflix/dsports/index.m3u8?token=f051f7e553452baeb9d2bdd9339dadd9e76f3c0b-4f-1768968925-1768914925&ip=103.108.230.51",
   tnt: "https://mze7u.envivoslatam.org/hotflix/tntsports/index.m3u8?token=bda516f4cfa61046c2c87324b1188eb9b306570d-fc-1768968947-1768914947&ip=103.108.230.51",
-  fox: "https://ub2dr.envivoslatam.org/hotflix/foxsports/index.m3u8?token=0ba7dbe10a732f2a7db337665ef856bbeb4fa9af-63-1768968988-1768914988&ip=103.108.230.51",
+  fox: "https://rci1w.envivoslatam.org/hotflix/foxsports/index.m3u8?token=a851682f54a98b90ed2d70ff91c1fdd3ed627b82-59-1768975576-1768921576&ip=190.175.32.169",
   espnpremium: "https://ub2dr.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=c9b8402f30c7f7881cff3cbfc3c6d0c3e645c7c7-5f-1768969011-1768915011&ip=103.108.230.51"
 };
 
@@ -157,6 +157,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
