--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
 <script>
 var streams = {
-  tyc: "https://rci1w.envivoslatam.org/hotflix/tycsports/index.m3u8?token=2faf73dc95e5539c6b603a60e52d8586e10f2a51-63-1768968899-1768914899&ip=103.108.230.51",
+  tyc: "https://mze7u.envivoslatam.org/hotflix/tycsports/index.m3u8?token=14949a8143fba336a42ac3574e7dbbe44c64b2bd-74-1768975944-1768921944&ip=190.175.32.169",
   dsports: "https://wf6kt.envivoslatam.org/hotflix/dsports/index.m3u8?token=f051f7e553452baeb9d2bdd9339dadd9e76f3c0b-4f-1768968925-1768914925&ip=103.108.230.51",
   tnt: "https://mze7u.envivoslatam.org/hotflix/tntsports/index.m3u8?token=bda516f4cfa61046c2c87324b1188eb9b306570d-fc-1768968947-1768914947&ip=103.108.230.51",
   fox: "https://rci1w.envivoslatam.org/hotflix/foxsports/index.m3u8?token=a851682f54a98b90ed2d70ff91c1fdd3ed627b82-59-1768975576-1768921576&ip=190.175.32.169",
@@ -157,6 +157,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
