--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ header .actions .primary{background:#0063f7;color:#fff;}
 </div>
 
 <div class="match-card" onclick="setStream('espn1');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/ESPN_logo.svg" alt="ESPN1">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/ESPN_logo.png/1272px-ESPN_logo.png?20251024214629" alt="ESPN1">
 <div class="details">En vivo</div>
 </div>
 
@@ -168,6 +168,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
