--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <script>
 var streams = {
   tyc: "https://mze7u.envivoslatam.org/hotflix/tycsports/index.m3u8?token=14949a8143fba336a42ac3574e7dbbe44c64b2bd-74-1768975944-1768921944&ip=190.175.32.169",
-  dsports: "https://wf6kt.envivoslatam.org/hotflix/dsports/index.m3u8?token=f051f7e553452baeb9d2bdd9339dadd9e76f3c0b-4f-1768968925-1768914925&ip=103.108.230.51",
-  tnt: "https://mze7u.envivoslatam.org/hotflix/tntsports/index.m3u8?token=bda516f4cfa61046c2c87324b1188eb9b306570d-fc-1768968947-1768914947&ip=103.108.230.51",
+  dsports: "https://ub2dr.envivoslatam.org/hotflix/dsports/index.m3u8?token=f1e4df7eda5cdfb5fb44f6a81b28c83592e09285-bf-1768978157-1768924157&ip=190.175.32.169",
+  tnt: "https://xky9q.envivoslatam.org/hotflix/tntsports/index.m3u8?token=b73090e130cda35e0c1a5885d43b41517f3dcc28-ed-1768978193-1768924193&ip=190.175.32.169",
   fox: "https://rci1w.envivoslatam.org/hotflix/foxsports/index.m3u8?token=a851682f54a98b90ed2d70ff91c1fdd3ed627b82-59-1768975576-1768921576&ip=190.175.32.169",
-  espnpremium: "https://ub2dr.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=c9b8402f30c7f7881cff3cbfc3c6d0c3e645c7c7-5f-1768969011-1768915011&ip=103.108.230.51",
+  espnpremium: "https://kh5vy.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=899750116764379341e7f6adfa6e47c91b9c8510-ec-1768978211-1768924211&ip=190.175.32.169",
   espn1: "https://smjt9q.envivoslatam.org/hotflix/espn/index.m3u8?token=bd23113350f8f7909f4e6e16e378b8c5c0cacc04-c1-1768976676-1768922676&ip=190.175.32.169"
 };
 
@@ -168,6 +168,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
