--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@ header .actions .primary{background:#0063f7;color:#fff;}
 
 <div class="match-card" onclick="setStream('fox');scrollPlayer();">
 <img src="https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png" style="width:120px;" alt="Champions League">
-<div class="name">Kairat Almaty vs Club Brujas</div>
-<div class="details">Champions League — 12:30 · FOX Sports</div>
+<div class="name">F.K. Bodø/Glimt vs Manchester City</div>
+<div class="details">Champions League — Fase de Grupos — 14:45 · ESPN</div>
 </div>
 
 <div class="match-card" onclick="setStream('tyc');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/en/a/aa/Copa_argentina_logo22.png" style="width:120px;" alt="Copa Argentina">
-<div class="name">Estudiantes de la Plata vs Ituzaingó</div>
-<div class="details">Copa Argentina — 21:00 · TyC Sports</div>
+<img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/FA_Cup_logo_%282020%29.svg/330px-FA_Cup_logo_%282020%29.svg.png" style="width:120px;" alt="FA Cup">
+<div class="name">Salford City vs Swindon Town</div>
+    <div class="details">FA Cup — 16:45 · Disney+</div>
 </div>
 
 <div class="match-card" onclick="setStream('dsports');scrollPlayer();">
@@ -168,6 +168,7 @@ setStream("tyc");
 
 </body>
 </html>
+
 
 
 
