--- a/index.html
+++ b/index.html
@@ -62,39 +62,7 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <!-- ========================= -->
 <section class="section">
 <h3>Canales en vivo</h3>
-<div class="row-cards">
-
-<div class="match-card" onclick="setStream('tyc');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/5/54/TyC_Sports_logo.svg" alt="TyC Sports">
-<div class="details">En vivo</div>
-</div>
-
-<div class="match-card" onclick="setStream('dsports');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/DSports.png?20221114223321" alt="DSports">
-<div class="details">En vivo</div>
-</div>
-
-<div class="match-card" onclick="setStream('tnt');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/f/f4/TNT_Sports_Premium_%28Argentina%29.png" alt="TNT Sports">
-<div class="details">En vivo</div>
-</div>
-
-<div class="match-card" onclick="setStream('fox');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Fox_Sports_Argentina_2023.svg/500px-Fox_Sports_Argentina_2023.svg.png" alt="Fox Sports">
-<div class="details">En vivo</div>
-</div>
-
-<div class="match-card" onclick="setStream('espnpremium');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/ESPN_Premium_logo.svg/1280px-ESPN_Premium_logo.svg.png" alt="ESPN Premium">
-<div class="details">En vivo</div>
-</div>
-
-<div class="match-card" onclick="setStream('espn1');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/ESPN_logo.png/1272px-ESPN_logo.png?20251024214629" alt="ESPN1">
-<div class="details">En vivo</div>
-</div>
-
-</div>
+<div class="row-cards" id="canalesContainer"></div>
 </section>
 
 <!-- ========================= -->
@@ -102,33 +70,7 @@ header .actions .primary{background:#0063f7;color:#fff;}
 <!-- ========================= -->
 <section class="section">
 <h3>Partidos en vivo</h3>
-<div class="row-cards">
-
-<div class="match-card" onclick="setStream('fox');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png" style="width:120px;" alt="Champions League">
-<div class="name">F.K. Bodø/Glimt vs Manchester City</div>
-<div class="details">Champions League — Fase de Grupos — 14:45 · ESPN</div>
-</div>
-
-<div class="match-card" onclick="setStream('tyc');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d5/FA_Cup_logo_%282020%29.svg/330px-FA_Cup_logo_%282020%29.svg.png" style="width:120px;" alt="FA Cup">
-<div class="name">Salford City vs Swindon Town</div>
-    <div class="details">FA Cup — 16:45 · Disney+</div>
-</div>
-
-<div class="match-card" onclick="setStream('dsports');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/DSports.png" style="width:120px;" alt="DSports">
-<div class="name">Inter Miami vs Atlanta</div>
-<div class="details">MLS — 22:30 · DSports</div>
-</div>
-
-<div class="match-card" onclick="setStream('tyc');scrollPlayer();">
-<img src="https://upload.wikimedia.org/wikipedia/commons/5/54/TyC_Sports_logo.svg" style="width:120px;" alt="TyC Sports">
-<div class="name">Belgrano vs Instituto</div>
-<div class="details">Amistoso — 18:00 · TyC Sports</div>
-</div>
-
-</div>
+<div class="row-cards" id="partidosContainer"></div>
 </section>
 
 <div class="player-container" id="playerSection">
@@ -139,19 +81,55 @@ header .actions .primary{background:#0063f7;color:#fff;}
 
 <script src="https://vjs.zencdn.net/7.21.1/video.min.js"></script>
 <script>
+// =========================
+// STREAMS Y CANALES
+// =========================
 var streams = {
   tyc: "https://mze7u.envivoslatam.org/hotflix/tycsports/index.m3u8?token=14949a8143fba336a42ac3574e7dbbe44c64b2bd-74-1768975944-1768921944&ip=190.175.32.169",
   dsports: "https://ub2dr.envivoslatam.org/hotflix/dsports/index.m3u8?token=f1e4df7eda5cdfb5fb44f6a81b28c83592e09285-bf-1768978157-1768924157&ip=190.175.32.169",
   tnt: "https://xky9q.envivoslatam.org/hotflix/tntsports/index.m3u8?token=b73090e130cda35e0c1a5885d43b41517f3dcc28-ed-1768978193-1768924193&ip=190.175.32.169",
   fox: "https://rci1w.envivoslatam.org/hotflix/foxsports/index.m3u8?token=a851682f54a98b90ed2d70ff91c1fdd3ed627b82-59-1768975576-1768921576&ip=190.175.32.169",
   espnpremium: "https://kh5vy.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=899750116764379341e7f6adfa6e47c91b9c8510-ec-1768978211-1768924211&ip=190.175.32.169",
-  espn1: "https://smjt9q.envivoslatam.org/hotflix/espn/index.m3u8?token=bd23113350f8f7909f4e6e16e378b8c5c0cacc04-c1-1768976676-1768922676&ip=190.175.32.169"
+  espn1: "https://smjt9q.envivoslatam.org/hotflix/espn/index.m3u8?token=bd23113350f8f7909f4e6e16e378b8c5c0cacc04-c1-1768976676-1768922676&ip=190.175.32.169",
+  disneyplus: "https://rci1w.envivoslatam.org/hotflix/disney9/index.m3u8?token=5c00f146746e0c50e6577dd89b8e64554da40aa9-9a-1768979192-1768925192&ip=190.175.32.169"
 };
 
-var player = videojs("mainPlayer", {
-  autoplay: true,
-  liveui: true
-});
+// Array de canales
+var canales = [
+  {key:"tyc", nombre:"TyC Sports", logo:"https://upload.wikimedia.org/wikipedia/commons/5/54/TyC_Sports_logo.svg"},
+  {key:"dsports", nombre:"DSports", logo:"https://upload.wikimedia.org/wikipedia/commons/5/5a/DSports.png?20221114223321"},
+  {key:"tnt", nombre:"TNT Sports", logo:"https://upload.wikimedia.org/wikipedia/commons/f/f4/TNT_Sports_Premium_%28Argentina%29.png"},
+  {key:"fox", nombre:"Fox Sports", logo:"https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Fox_Sports_Argentina_2023.svg/500px-Fox_Sports_Argentina_2023.svg.png"},
+  {key:"espnpremium", nombre:"ESPN Premium", logo:"https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/ESPN_Premium_logo.svg/1280px-ESPN_Premium_logo.svg.png"},
+  {key:"espn1", nombre:"ESPN1", logo:"https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/ESPN_logo.png/1272px-ESPN_logo.png?20251024214629"},
+  {key:"disneyplus", nombre:"Disney+", logo:"https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Disney%2B_logo.svg/1280px-Disney%2B_logo.svg.png"}
+];
+
+// Array de partidos
+var partidos = [
+  // Bodø/Glimt vs Manchester City primero
+  {liga:"Champions League", local:"F.K. Bodø/Glimt", visitante:"Manchester City", hora:"14:45", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  
+  {liga:"Champions League", local:"Real Madrid", visitante:"Monaco", hora:"17:00", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"Champions League", local:"Sporting CP", visitante:"PSG", hora:"17:00", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"Champions League", local:"Tottenham Hotspur", visitante:"Borussia Dortmund", hora:"17:00", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"Champions League", local:"Internazionale", visitante:"Arsenal", hora:"17:00", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"Champions League", local:"Villarreal", visitante:"Ajax", hora:"17:00", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"Champions League", local:"Olympiakos Piraeus", visitante:"Bayer Leverkusen", hora:"17:00", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"Champions League", local:"København", visitante:"Napoli", hora:"17:00", canal:"espn1", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  
+  {liga:"Championship", local:"Wrexham", visitante:"Leicester City", hora:"17:00", canal:"dsports", logo:"https://upload.wikimedia.org/wikipedia/commons/3/3b/EFL_Championship_Logo.png"},
+  {liga:"Supercopa de Chile", local:"Huachipato", visitante:"Universidad Católica", hora:"19:00", canal:"tyc", logo:"https://upload.wikimedia.org/wikipedia/commons/1/1e/Supercopa_de_Chile_logo.png"},
+  {liga:"Serie Río de la Plata", local:"Miramar Misiones", visitante:"Colón", hora:"20:00", canal:"tyc", logo:"https://upload.wikimedia.org/wikipedia/commons/5/54/TyC_Sports_logo.svg"},
+  {liga:"Serie Río de la Plata", local:"Deportes Concepción", visitante:"Cerro Largo", hora:"22:00", canal:"tyc", logo:"https://upload.wikimedia.org/wikipedia/commons/5/54/TyC_Sports_logo.svg"},
+  {liga:"Liga Nacional", local:"Xelajú", visitante:"Aurora", hora:"23:00", canal:"disneyplus", logo:"https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_Logo.svg"},
+  {liga:"Primera División", local:"Herediano", visitante:"Guadalupe", hora:"23:00", canal:"disneyplus", logo:"https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_Logo.svg"}
+];
+
+// =========================
+// FUNCIONES
+// =========================
+var player = videojs("mainPlayer", {autoplay:true, liveui:true});
 
 function setStream(key){
   player.src({ src: streams[key], type: "application/x-mpegURL" });
@@ -162,16 +140,34 @@ function scrollPlayer(){
   document.getElementById("playerSection").scrollIntoView({behavior:"smooth"});
 }
 
+// =========================
+// GENERAR HTML DINÁMICO
+// =========================
+var canalesContainer = document.getElementById("canalesContainer");
+canales.forEach(c => {
+  let div = document.createElement("div");
+  div.className = "match-card";
+  div.onclick = ()=>{ setStream(c.key); scrollPlayer(); };
+  div.innerHTML = `<img src="${c.logo}" alt="${c.nombre}"><div class="details">En vivo</div>`;
+  canalesContainer.appendChild(div);
+});
+
+var partidosContainer = document.getElementById("partidosContainer");
+partidos.forEach(p => {
+  let div = document.createElement("div");
+  div.className = "match-card";
+  div.onclick = ()=>{ setStream(p.canal); scrollPlayer(); };
+  div.innerHTML = `<img src="${p.logo}" style="width:120px;" alt="${p.liga}">
+                   <div class="name">${p.local} vs ${p.visitante}</div>
+                   <div class="details">${p.liga} — ${p.hora} · ${p.canal.replace("plus","+")}</div>`;
+  partidosContainer.appendChild(div);
+});
+
 // Inicializa con TyC Sports
 setStream("tyc");
 </script>
 
 </body>
 </html>
-
-
-
-
-
 
 
