--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <title>SMTTV (Hecho Por Salvador Mompó Tardito)</title>
 <link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet" />
 
+<!-- PASO 4: vincular el manifest -->
+<link rel="manifest" href="manifest.json">
+
+<!-- PASO 5: meta para android/chrome -->
+<meta name="theme-color" content="#0b1b2b">
+    
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:Inter,system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial;}
 body{background:#0b1b2b;color:#fff;overflow-x:hidden;}
@@ -159,7 +165,15 @@ partidos.forEach(p => {
 // Inicializa con TyC Sports
 setStream("tyc");
 </script>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js')
+    .then(() => console.log('Service Worker registrado'))
+    .catch(err => console.log('Error al registrar SW:', err));
+}
+</script>
 
 </body>
 </html>
+
 
