--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@ header .actions .primary{background:#0063f7;color:#fff;}
 // STREAMS Y CANALES
 // =========================
 var streams = {
-  tyc: "https://mze7u.envivoslatam.org/hotflix/tycsports/index.m3u8?token=14949a8143fba336a42ac3574e7dbbe44c64b2bd-74-1768975944-1768921944&ip=190.175.32.169",
-  dsports: "https://ub2dr.envivoslatam.org/hotflix/dsports/index.m3u8?token=f1e4df7eda5cdfb5fb44f6a81b28c83592e09285-bf-1768978157-1768924157&ip=190.175.32.169",
-  tnt: "https://xky9q.envivoslatam.org/hotflix/tntsports/index.m3u8?token=b73090e130cda35e0c1a5885d43b41517f3dcc28-ed-1768978193-1768924193&ip=190.175.32.169",
-  fox: "https://rci1w.envivoslatam.org/hotflix/foxsports/index.m3u8?token=a851682f54a98b90ed2d70ff91c1fdd3ed627b82-59-1768975576-1768921576&ip=190.175.32.169",
-  espnpremium: "https://kh5vy.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=899750116764379341e7f6adfa6e47c91b9c8510-ec-1768978211-1768924211&ip=190.175.32.169",
+  tyc: "https://kh5vy.envivoslatam.org/hotflix/tycsports/index.m3u8?token=307c02772e545ba15da97b7e775b5a8c6db76c3f-0b-1769061765-1769007765&ip=190.175.32.169",
+  dsports: "https://j8nte.envivoslatam.org/hotflix/dsports/index.m3u8?token=306eed1633804dddb21da741bc3253175279eb52-06-1769062030-1769008030&ip=190.175.32.169",
+  tnt: "https://pvtn5y.envivoslatam.org/hotflix/tntsports/index.m3u8?token=97d38c6056a699184af45c1eb7f448c3275a9928-1a-1769062122-1769008122&ip=190.175.32.169",
+  fox: "https://pvtn5y.envivoslatam.org/hotflix/foxsports/index.m3u8?token=b641858938b9d3714768375ceb35f8cdfc652551-13-1769062325-1769008325&ip=190.175.32.169",
+  espnpremium: "https://tk0hz.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=ed4f69aefcd84f0d13871e7711beac5633883616-1b-1769062410-1769008410&ip=190.175.32.169",
   espn1: "https://smjt9q.envivoslatam.org/hotflix/espn/index.m3u8?token=bd23113350f8f7909f4e6e16e378b8c5c0cacc04-c1-1768976676-1768922676&ip=190.175.32.169",
   espn2: "https://pvtn5y.envivoslatam.org/hotflix/espn2/index.m3u8?token=cfd94a3d35413650159d7df0870ca242afa7f46b-65-1768984801-1768930801&ip=190.175.32.169",
   espn3: "https://lcrj3.envivoslatam.org/hotflix/espn3/index.m3u8?token=7c5f2ab809738ead2354160e7927635fece83bfe-48-1768984771-1768930771&ip=190.175.32.169",
@@ -175,5 +175,6 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
+
 
 
