--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- PASO 5: meta para android/chrome -->
 <meta name="theme-color" content="#0b1b2b">
-    
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:Inter,system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial;}
 body{background:#0b1b2b;color:#fff;overflow-x:hidden;}
@@ -97,15 +97,19 @@ var streams = {
   fox: "https://pvtn5y.envivoslatam.org/hotflix/foxsports/index.m3u8?token=b641858938b9d3714768375ceb35f8cdfc652551-13-1769062325-1769008325&ip=190.175.32.169",
   espnpremium: "https://tk0hz.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=ed4f69aefcd84f0d13871e7711beac5633883616-1b-1769062410-1769008410&ip=190.175.32.169",
   espn1: "https://smjt9q.envivoslatam.org/hotflix/espn/index.m3u8?token=bd23113350f8f7909f4e6e16e378b8c5c0cacc04-c1-1768976676-1768922676&ip=190.175.32.169",
-  espn2: "https://pvtn5y.envivoslatam.org/hotflix/espn2/index.m3u8?token=cfd94a3d35413650159d7df0870ca242afa7f46b-65-1768984801-1768930801&ip=190.175.32.169",
-  espn3: "https://lcrj3.envivoslatam.org/hotflix/espn3/index.m3u8?token=7c5f2ab809738ead2354160e7927635fece83bfe-48-1768984771-1768930771&ip=190.175.32.169",
-  espn4: "https://rci1w.envivoslatam.org/hotflix/espn4/index.m3u8?token=7a88e670097b9f934c2d99dcef6e30a34fe46cef-4-1768985066-1768931066&ip=190.175.32.169",
+  espn2: "https://tk0hz.envivoslatam.org/hotflix/espn2/index.m3u8?token=149cbc039861383e192a6dfd55659082ee08cfd0-67-1769068835-1769014835&ip=190.175.32.169",
+  espn3: "https://kh5vy.envivoslatam.org/hotflix/espn3/index.m3u8?token=98ba11b4fffbe8d23d662c696289c308c3131e21-66-1769069005-1769015005&ip=190.175.32.169",
+  espn4: "https://xky9q.envivoslatam.org/hotflix/espn4/index.m3u8?token=f41dd7bee7b8b8e8bfe2c4be763a67d9671326f2-e1-1769069024-1769015024&ip=190.175.32.169",
   espn5: "https://smjt9q.envivoslatam.org/hotflix/espn5/index.m3u8?token=66130bd0638c176a6a260f1c7b35a13141456bdf-19-1768984736-1768930736&ip=190.175.32.169",
-  espn6: "https://yce5o.envivoslatam.org/hotflix/espn6/index.m3u8?token=68812f7330e1b6511be09b3a75b5d6a01ae16233-9c-1768985102-1768931102&ip=190.175.32.169",
+  espn6: "https://qbk4f.envivoslatam.org/hotflix/espn6/index.m3u8?token=aab88083781e7b433bc5f927f2e1b227849e9f7c-54-1769069106-1769015106&ip=190.175.32.169",
   espn7: "https://lcrj3.envivoslatam.org/hotflix/espn7/index.m3u8?token=d3b8321a1644404313594a9549f7731161067da2-ab-1768985043-1768931043&ip=190.175.32.169",
+  fox2ar: "https://lcrj3.envivoslatam.org/hotflix/fox2ar/index.m3u8?token=5460483c6c508c6ee210fcfe1b0b0751d04cdefc-c9-1769069157-1769015157&ip=190.175.32.169",
   disneyplus: "https://rci1w.envivoslatam.org/hotflix/disney9/index.m3u8?token=5c00f146746e0c50e6577dd89b8e64554da40aa9-9a-1768979192-1768925192&ip=190.175.32.169",
-  disney8: "https://xky9q.envivoslatam.org/hotflix/disney8/index.m3u8?token=baad88031e15355349db5ff58ee60768901ceb8c-8c-1768987871-1768933871&ip=190.175.32.169",
-  tntsportschile: "https://lcrj3.envivoslatam.org/hotflix/tntsportschile/index.m3u8?token=52d7cd5f97c1d16ebe3c3b11afbf33fe58f66546-46-1768987931-1768933931&ip=190.175.32.169"
+  disney8: "https://xky9q.envivoslatam.org/hotflix/disney8/index.m3u8?token=b14fb532ddbcd03a81063edbbcb2e00aa8665e49-23-1769069179-1769015179&ip=190.175.32.169",
+  tntsportschile: "https://tk0hz.envivoslatam.org/hotflix/tntsportschile/index.m3u8?token=76ed9ef3950dfa8840d66078d3fbd765642f83d2-0e-1769069204-1769015204&ip=190.175.32.169",
+  premiere1: "https://ng0pr.envivoslatam.org/hotflix/premiere1/index.m3u8?token=c549435a1d47e993e64adb985f378715601174f5-0e-1769069221-1769015221&ip=190.175.32.169",
+  sporttvbr1: "https://smjt9q.envivoslatam.org/hotflix/sporttvbr1/index.m3u8?token=ab8effe0635d080e3514900ecf307f099c418073-97-1769069246-1769015246&ip=190.175.32.169",
+  max1: "https://iaw5b.envivoslatam.org/hotflix/max1/index.m3u8?token=1707f133f711aaa16eabe4c50e8fb0f7f6b31d87-c3-1769069271-1769015271&ip=190.175.32.169"
 };
 
 // Array de canales
@@ -119,10 +123,24 @@ var canales = [
   {key:"disneyplus", nombre:"Disney+", logo:"https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_Logo.svg"}
 ];
 
-// Array de partidos
+// Array de partidos actualizado con logos
 var partidos = [
-  {liga:"Serie Río de la Plata", local:"Miramar Misiones", visitante:"Colón", hora:"20:00", canal:"espnpremium", logo:"https://i.imgur.com/mpW7IqU.png"},
-  {liga:"Serie Río de la Plata", local:"Deportes Concepción", visitante:"Cerro Largo", hora:"22:00", canal:"espnpremium", logo:"https://i.imgur.com/mpW7IqU.png"},
+  {liga:"UEFA Champions League", local:"Slavia Praha", visitante:"Barcelona", hora:"17:00", canal:"espn2", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"UEFA Champions League", local:"Bayern München", visitante:"Union Saint-Gilloise", hora:"17:00", canal:"espn", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"UEFA Champions League", local:"Chelsea", visitante:"Paphos", hora:"17:00", canal:"espn3", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"UEFA Champions League", local:"Atalanta", visitante:"Athletic Club", hora:"17:00", canal:"espn4", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"UEFA Champions League", local:"Olympique Marseille", visitante:"Liverpool", hora:"17:00", canal:"fox", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"UEFA Champions League", local:"Newcastle United", visitante:"PSV", hora:"17:00", canal:"espn6", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+  {liga:"UEFA Champions League", local:"Juventus", visitante:"Benfica", hora:"17:00", canal:"fox2ar", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
+
+  {liga:"Championship", local:"Stoke City", visitante:"Middlesbrough", hora:"17:00", canal:"disney8", logo:"https://upload.wikimedia.org/wikipedia/en/thumb/0/0f/EFL_Championship_Logo.svg/960px-EFL_Championship_Logo.svg.png"},
+  {liga:"Supercopa de Chile", local:"Coquimbo Unido", visitante:"Deportes Limache", hora:"19:00", canal:"tntsportschile", logo:"https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjJvDBvJMXwk3O1Ei5PLwYeHSmGioWo9ok50eG9PLRNOOMFUmU0xBpmYj79KAD5QMRQw-PRIoil_0e76htxEhnbacRfNNaHuoIcYaeyYGzRCCZJBItqTaDuHSGKuzjZklMvCV3ipdLa5lnRrjAAi03MndCrLN4pyDo10SQ-_nuy3K8l_L7P2TZzivOxVDk/s16000/Supercopa%20Construmart.png"},
+  {liga:"Campeonato Carioca", local:"Botafogo", visitante:"Volta Redonda", hora:"19:00", canal:"premiere1", logo:"https://i.imgur.com/s3ZYvRm.png"},
+  {liga:"Campeonato Carioca", local:"Flamengo", visitante:"Vasco da Gama", hora:"21:30", canal:"?", logo:"https://i.imgur.com/s3ZYvRm.png"},
+  {liga:"Campeonato Gaúcho", local:"Internacional", visitante:"Inter Santa Maria", hora:"19:00", canal:"sporttvbr1", logo:"https://www.ceroacero.es/img/logos/competicoes/904_imgbank_rs1_20250312164114.png"},
+  {liga:"Campeonato Paulista A1", local:"Mirassol", visitante:"RB Bragantino", hora:"20:00", canal:"max1", logo:"https://upload.wikimedia.org/wikipedia/pt/1/1c/Paulist%C3%A3o_2026.png?20260102051135"},
+  {liga:"Serie Río de la Plata", local:"Colo-Colo", visitante:"Peñarol", hora:"21:00", canal:"espnpremium", logo:"https://i.imgur.com/mpW7IqU.png"},
+  {liga:"Copa Argentina", local:"Argentinos Juniors", visitante:"Midland", hora:"21:15", canal:"tyc", logo:"https://static.wikia.nocookie.net/logopedia/images/9/9c/CA_2022.png/revision/latest?cb=20230807035650&path-prefix=es"},
 ];
 
 // =========================
@@ -175,6 +193,3 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
-
-
-
