--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ var partidos = [
   {liga:"Campeonato Gaúcho", local:"Internacional", visitante:"Inter Santa Maria", hora:"19:00", canal:"sporttvbr1", logo:"https://www.ceroacero.es/img/logos/competicoes/904_imgbank_rs1_20250312164114.png"},
   {liga:"Campeonato Paulista A1", local:"Mirassol", visitante:"RB Bragantino", hora:"20:00", canal:"max1", logo:"https://upload.wikimedia.org/wikipedia/pt/1/1c/Paulist%C3%A3o_2026.png?20260102051135"},
   {liga:"Serie Río de la Plata", local:"Colo-Colo", visitante:"Peñarol", hora:"21:00", canal:"espnpremium", logo:"https://i.imgur.com/mpW7IqU.png"},
-  {liga:"Copa Argentina", local:"Argentinos Juniors", visitante:"Midland", hora:"21:15", canal:"tyc", logo:"https://static.wikia.nocookie.net/logopedia/images/9/9c/CA_2022.png/revision/latest?cb=20230807035650&path-prefix=es"},
+  {liga:"Copa Argentina", local:"Argentinos Juniors", visitante:"Midland", hora:"21:15", canal:"tyc", logo:"https://upload.wikimedia.org/wikipedia/en/thumb/a/aa/Copa_argentina_logo22.png/250px-Copa_argentina_logo22.png"},
 ];
 
 // =========================
@@ -193,3 +193,4 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
+
